# frontend

Front/drf_backend/drf_backend/: db.sqlite3  pyproject.toml  requirements.txt
Front/drf_backend/drf_backend/blog/: models.py  serializers.py  urls.py  views.py
Front/drf_backend/drf_backend/blog/migrations/: 0001_initial.py
Front/drf_backend/drf_backend/config/: settings.py  urls.py
